# maplestory-flutter

./: BUILD.md  README.md  deploy.ps1  deploy.sh  pubspec.yaml  render.yaml  trigger.txt
.github/workflows/: build.yml  ci.yml  pages.yml
android/: gradle.properties  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/maplestory_flutter/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/values-night/: styles.xml
lib/: main.dart
lib/game/: game.dart
lib/game/models/: item.dart  item_temp.dart  mail.dart  map.dart  mob.dart  player.dart  potential.dart  quest.dart
lib/providers/: game_provider.dart
lib/repositories/: hive_save_repository.dart  save_repository.dart
lib/screens/: battle_screen.dart  create_character_screen.dart  game_screen.dart  shop_screen.dart
lib/services/: audio_manager.dart
lib/utils/: version.dart
lib/widgets/: action_panel.dart  character_dialog.dart  cube_dialog.dart  equipment_detail_dialog.dart  game_log.dart  inventory_dialog.dart  mail_dialog.dart  quest_dialog.dart  status_bar.dart
web/: index.html  manifest.json
windows/: .gitignore  CMakeLists.txt
